ajac call changes

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -348,6 +348,11 @@ db {
   default.password = "rohit!@#"
   default.host = localhost
   
+   secondary.driver = com.mysql.jdbc.Driver
+  secondary.url = "jdbc:mysql://localhost:3306/mydata"
+  secondary.username = root
+  secondary.password = "rohit!@#"
+  secondary.host = localhost
     
 
  
